[package]
name = "pqc-ml-kem"
version = "0.4.0"
edition = "2021"
authors = ["Godspower Eze"]
description = "A library for Module-Lattice Key Encryption Mechanism (ML-KEM)"
license = "MIT"
repository = "https://github.com/Godspower-Eze/ml_kem.rs"
readme = "README.md"
keywords = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rand = "0.8"
sha3 = "0.10"
serde_json = "1.0"
hex = "0.4"
